<resources>
    <string name="app_name">Ecom Shopping App</string>

    /////////////RazorPay
    <string name="razorpay_key_id">rzp_test_QzIMUlv4KImaV2</string>
    /////////////RazorPay

    /////////////Facebook
    <string name="facebook_app_id">256190292688706</string>
    <string name="fb_login_protocol_scheme">fb256190292688706</string>
    /////////////Facebook

    <string name="search_products">Search Products</string>
    <string name="currency">Rs</string>
    <string name="write_review_hint">Write your review here</string>
    <string name="notification_activity_title">Activity</string>
    <string name="country_form">Country</string>
    <string name="first_name_form">First Name</string>
    <string name="last_name_form">Last Name</string>
    <string name="street_address_form">Street Address</string>
    <string name="street_address_2_form">Street Address 2 (Optional)</string>
    <string name="city_form">City</string>
    <string name="state_province_form">State/Province</string>
    <string name="zip_code_form">Zip Code</string>
    <string name="phone_number_form">Phone Number</string>
    <string name="save_address_btn">Save</string>
    <string name="credit_card_number_form">Card Number</string>
    <string name="credit_caard_expiry_form">Expiration Date</string>
    <string name="credit_card_cvc_form">Security Code</string>
    <string name="credit_card_holder_form">Card Holder</string>
    <string name="add_card_screen_title">Add Card</string>
    <string name="add_review_msg">Please write Overall level of satisfication with your shipping / Delivery Service</string>
    <string name="add_review_screen_title">Write Review</string>
    <string name="write_review_form">Write Review</string>
    <string name="submit_review_btn">Submit Review</string>
    <string name="address_screen_title">Address</string>
    <string name="add_address_btn">Add Address</string>
    <string name="delete_confirm_title">Confirmation</string>
    <string name="delete_confirmation_msg">Are you sure want to delete address</string>
    <string name="delete_address_confirm_btn">Delete</string>
    <string name="delete_address_cancel_btn">Cancel</string>
    <string name="categories_screen_title">Categories</string>
    <string name="category_products_screen_title">Super Flash Sale</string>
    <string name="banner_1_title">Super Flash Sale 50% Off</string>
    <string name="write_review_btn">Write Review</string>
    <string name="credit_card_screen_itle">Credit Card</string>
    <string name="add_card_btn">Add Card</string>
    <string name="change_name_screen_title">Change Name</string>
    <string name="save_profile_btn">Save</string>
    <string name="change_email_btn">Change Email</string>
    <string name="sent_email_code_msg">We Will Send verification to your new Email</string>
    <string name="change_email_form">Change Email</string>
    <string name="choose_gender_form">Choose Gender</string>
    <string name="change_password_btn">Send Email</string>
    <string name="change_password_screen_title">Change Password</string>
    <string name="old_password_form">Old Password</string>
    <string name="new_password_form">New Password</string>
    <string name="new_password_again_form">New Password Again</string>
    <string name="change_phonenumber_title">Phone Number</string>
    <string name="choose_credit_card_screen_itle">Choose Credit/Debit Card</string>
    <string name="notification_feed_title">Feed</string>
    <string name="sign_in_msg">Sign in to continue</string>
    <string name="lgoin_email_form">Your Email</string>
    <string name="login_password_form">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="dont_have_an_account_msg">Dont have an account? Register</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="notifications_screen_title">Notifications</string>
    <string name="order_details_screen">Order Details</string>
    <string name="cancel_order_btn">Cancel Order</string>
    <string name="orders_screen_title">Orders</string>
    <string name="select_size_txt">Select Size</string>
    <string name="select_color_txt">Select Color</string>
    <string name="prouct_description_txt">Description</string>
    <string name="product_reviews">Review Product</string>
    <string name="see_more_reviews_txt">See More</string>
    <string name="you_might_also_like_txt">You Might Also Like</string>
    <string name="add_to_cart_btn">Add To Cart</string>
    <string name="profile_screen_title">Profile</string>
    <string name="success_screen_title">Congratulations!</string>
    <string name="order_success_msg">Your Order has been placed Successfully!</string>
    <string name="back_to_home_btn">Back To Home</string>
    <string name="wishlist_screen_title">Wishlist</string>
    <string name="order_summary_txt">Order Summary</string>
    <string name="choose_address_screen_title">Ship To</string>
    <string name="next_btn">Next</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string name="white">#FFFFFF</string>
    <string name="yellow">#FFFF00</string>
    <string name="fuchsia">#FF00FF</string>
    <string name="red">#FF0000</string>
    <string name="silver">#C0C0C0</string>
    <string name="gray">#808080</string>
    <string name="olive">#808000</string>
    <string name="purple">#800080</string>
    <string name="maroon">#800000</string>
    <string name="aqua">#00FFFF</string>
    <string name="lime">#00FF00</string>
    <string name="teal">#008080</string>
    <string name="green">#008000</string>
    <string name="blue">#0000FF</string>
    <string name="navy">#000080</string>
    <string name="black">#000000</string>

</resources>
