<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".review.AddReviewActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_review_screen_title"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <View
        android:id="@+id/divider13"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <TextView
        android:id="@+id/write_review_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_review_msg"
        android:textColor="@color/dark"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider13" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/star_container"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/write_review_msg"
        app:layout_constraintStart_toStartOf="@+id/write_review_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:src="@drawable/ic_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:src="@drawable/ic_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:src="@drawable/ic_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:src="@drawable/ic_star"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/writ_review_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_review_form"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/star_container"
        app:layout_constraintTop_toBottomOf="@+id/star_container" />

    <EditText
        android:id="@+id/write_review_edittext"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/search_background"
        android:layout_margin="16dp"
        android:textColor="@color/grey"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/write_review_hint"
        android:textColorHint="@color/grey"
        android:maxLines="5"
        android:gravity="top"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writ_review_txt" />

    <ProgressBar
        android:id="@+id/add_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/submit_review_btn"
        app:layout_constraintEnd_toEndOf="@+id/submit_review_btn"
        app:layout_constraintStart_toStartOf="@+id/submit_review_btn"
        app:layout_constraintTop_toTopOf="@+id/submit_review_btn" />

    <Button
        android:id="@+id/submit_review_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:text="@string/submit_review_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/write_review_edittext"
        app:layout_constraintStart_toStartOf="@+id/write_review_edittext"
        app:layout_constraintTop_toBottomOf="@+id/write_review_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>